bdr.BDR.scala.error
Compilation error:
BDR:2: error: not found: type string
var x:string="test"
      ^BDR:5: error: not found: value getIndication
  x=getIndication();
    ^